envio de email configurado

--- a/templates/boletim.html.twig
+++ b/templates/boletim.html.twig
@@ -1,4 +1,20 @@
-{{ content }}
+
+{{form}}
+
+
+{#
+Deveria funcionar assim:
+{{form.table}}
+
+{{form.numero}}
+{{form.submit}}
+
+
+{{ form.form_build_id }}
+{{ form.form_token }}
+{{ form.form_id }}
+{{ form.actions }}
+#}
 
 
 
